# amtc_common

./: README.md
amtc_common/: CMakeLists.txt  package.xml  setup.py
amtc_common/include/amtc_common/: Communications.h  Debug.h  Enum.h  NodeConfigure.h  enum.h
amtc_common/src/: Communications.cpp  Debug.cpp  Enum.cpp  NodeConfigure.cpp
amtc_common/src/amtc_common/: Communications.py
amtc_common/test/: test_Communications.cpp  test_Communications.py  test_Communications_subscriber_with_caller_id.cpp  test_NodeConfigure.cpp  test_NodeConfigure.py  test_NodeConfigure_params.yaml  tf_manual_align_node.cpp
amtc_common_msgs/: CMakeLists.txt  package.xml
amtc_common_msgs/msg/: CommunicationStatus.msg  PublisherInfo.msg  SubscriberInfo.msg  TimerInfo.msg
amtc_common_srvs/: CMakeLists.txt  package.xml
amtc_common_srvs/srv/Utils/: PointCloud2.srv
opaque_functions/: package.xml  setup.cfg  setup.py
opaque_functions/opaque_functions/: launch_args_declarations.py  opaque_utils.py
