<?xml version="1.0"?>
<package format="3">
  <name>amtc_common</name>
  <version>0.0.0</version>
  <description>Softwares and Libraries related to ROS development by AMTC.</description>

  <maintainer email="isao.parra@amtc.uchile.cl">Isao Parra</maintainer>
  <author email="isao.parra@amtc.uchile.cl">Isao Parra</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>



  <export>

    <build_type>ament_cmake</build_type>

  </export>
</package>
