<?xml version="1.0"?>
<package>
  <name>amtc_common_msgs</name>
  <version>0.0.0</version>
  <description>Messages, Services and Actions related to amtc developed code.</description>

  <maintainer email="isao.parra@amtc.cl">Isao Parra</maintainer>
  <author email="isao.parra@amtc.cl">Isao Parra</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
