<?xml version="1.0"?>
<package format="3">
  <name>amtc_common_msgs</name>
  <version>0.0.0</version>
  <description>Messages, Services and Actions related to amtc developed code.</description>

  <maintainer email="isao.parra@amtc.cl">Isao Parra</maintainer>
  <author email="isao.parra@amtc.cl">Isao Parra</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
